# merlinai-proxy

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: architecture-flow.md
merlin_proxy/: app.py  config.py  logging_config.py  merlin_client.py  openai_adapter.py  schemas.py
merlinai_adapter_server/: app.py  auth.py  config.py  merlin_client.py  merlin_protocol.py  message_utils.py  openai_adapter.py  openai_response_builder.py  protocol_constants.py  schemas.py  security.py  tool_payload_parser.py  tool_prompt.py
